--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
