--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-headroom": "^3.2.1",
     "react-icons": "^5.0.1",
+    "react-international-phone": "^4.2.6",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.3.9",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
     "rsuite": "^5.53.2",
     "sass": "^1.71.0",
     "semantic-ui-react": "^2.1.5",
+    "swiper": "^11.0.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
