--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@canvasjs/react-charts": "^1.0.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
@@ -26,6 +25,7 @@
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-headroom": "^3.2.1",
     "react-icons": "^5.0.1",
     "react-international-phone": "^4.2.6",
@@ -34,6 +34,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-toastify": "^10.0.4",
+    "recharts": "^2.12.2",
     "rsuite": "^5.53.2",
     "sass": "^1.71.0",
     "semantic-ui-react": "^2.1.5",
