--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
