--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.2",
     "react-google-charts": "^4.0.1",
     "react-headroom": "^3.2.1",
     "react-icons": "^5.0.1",
@@ -35,7 +36,9 @@
     "react-phone-number-input": "^3.3.9",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
+    "react-wavify": "^1.10.0",
     "recharts": "^2.12.2",
     "rsuite": "^5.53.2",
     "sass": "^1.71.0",
