--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
