--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
+    "copy-to-clipboard": "^3.3.3",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
